==> Dievesa/ize-compose/lib/InkplateLibrary/src/features/rtc/rtc.cpp <==
#include "rtc.h"

void RTC::setTime(uint8_t rtcHour, uint8_t rtcMinute, uint8_t rtcSecond, bool isPM)
{
    if (_12hMode && rtcHour > 12) // user passed 24h value
    {
        _isPM = true;
        rtcHour = rtcHour - 12;
    }
    else if (_12hMode && rtcHour == 0) // midnight edge case
    {
        _isPM = false;
        rtcHour = 12;
    }
    else
    {
        _isPM = isPM;
    }

    uint8_t hourBcd = decToBcd(rtcHour);
    if (_12hMode && isPM)
        hourBcd |= (1 << 5);

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_RAM_by);
    Wire.write(RTC_SET); // Write in RAM to know that RTC is set
    Wire.write(decToBcd(rtcSecond));
    Wire.write(decToBcd(rtcMinute));
    Wire.write(hourBcd);
    Wire.endTransmission();
}

void RTC::enableAlarm() // datasheet 8.5.6.
{
    // check Table 2. Control_2
    Control2 = RTC_CTRL_2_DEFAULT | RTC_ALARM_AIE; // enable interrupt
    Control2 &= ~RTC_ALARM_AF;                     // clear alarm flag

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_2);
    Wire.write(Control2);
    Wire.endTransmission();
}

void RTC::setAlarm(uint8_t AlarmSecond, uint8_t AlarmMinute, uint8_t AlarmHour, uint8_t AlarmDay, uint8_t AlarmWeekday)
{
    if (AlarmSecond < 99)
    { // rtcSecond
        AlarmSecond = constrain(AlarmSecond, 0, 59);
        AlarmSecond = decToBcd(AlarmSecond);
        AlarmSecond &= ~RTC_ALARM;
    }
    else
    {
        AlarmSecond = 0x0;
        AlarmSecond |= RTC_ALARM;
    }

    if (AlarmMinute < 99)
    { // rtcMinute
        AlarmMinute = constrain(AlarmMinute, 0, 59);
        AlarmMinute = decToBcd(AlarmMinute);
        AlarmMinute &= ~RTC_ALARM;
    }
    else
    {
        AlarmMinute = 0x0;
        AlarmMinute |= RTC_ALARM;
    }

    // handle hour format conversion
    if (AlarmHour < 99)
    {
        if (_12hMode && AlarmHour > 12) // user passed 24h value but is using 12h mode
        {
            AlarmHour = AlarmHour - 12;
            AlarmHour = decToBcd(AlarmHour);
            AlarmHour |= (1 << 5); // set PM bit
            AlarmHour &= ~RTC_ALARM;
        }
        else if (_12hMode && AlarmHour == 0) // midnight edge case
        {
            AlarmHour = 12;
            AlarmHour = decToBcd(AlarmHour);
            AlarmHour &= ~RTC_ALARM; // AM, no PM bit
        }
        else
        {
            AlarmHour = constrain(AlarmHour, 0, 23);
            AlarmHour = decToBcd(AlarmHour);
            AlarmHour &= ~RTC_ALARM;
        }
    }
    else
    {
        AlarmHour = 0x0;
        AlarmHour |= RTC_ALARM;
    }

    if (AlarmDay < 99)
    { // rtcDay
        AlarmDay = constrain(AlarmDay, 1, 31);
        AlarmDay = decToBcd(AlarmDay);
        AlarmDay &= ~RTC_ALARM;
    }
    else
    {
        AlarmDay = 0x0;
        AlarmDay |= RTC_ALARM;
    }

    if (AlarmWeekday < 99)
    { // rtcWeekday
        AlarmWeekday = constrain(AlarmWeekday, 0, 6);
        AlarmWeekday = decToBcd(AlarmWeekday);
        AlarmWeekday &= ~RTC_ALARM;
    }
    else
    {
        AlarmWeekday = 0x0;
        AlarmWeekday |= RTC_ALARM;
    }

    enableAlarm();

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_SECOND_ALARM);
    Wire.write(AlarmSecond);
    Wire.write(AlarmMinute);
    Wire.write(AlarmHour);
    Wire.write(AlarmDay);
    Wire.write(AlarmWeekday);
    Wire.endTransmission();
}

void RTC::setAlarmEpoch(uint32_t _epoch, uint8_t _match)
{
    struct tm _t;
    time_t _e = _epoch;

    memcpy(&_t, localtime((const time_t *)&_e), sizeof(_t));

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_SECOND_ALARM);
    Wire.write(decToBcd(_t.tm_sec) & (~((_match & 1) << 7)));
    Wire.write(decToBcd(_t.tm_min) & (~(((_match >> 1) & 1) << 7)));
    Wire.write(decToBcd(_t.tm_hour) & (~(((_match >> 2) & 1) << 7)));
    Wire.write(decToBcd(_t.tm_mday) & (~(((_match >> 3) & 1) << 7)));
    Wire.write(decToBcd(_t.tm_wday) & (~(((_match >> 4) & 1) << 7)));
    Wire.endTransmission();

    enableAlarm();
}

uint8_t RTC::getAlarmSecond()
{
    readAlarm();
    return AlarmSecond;
}

uint8_t RTC::getAlarmMinute()
{
    readAlarm();
    return AlarmMinute;
}

uint8_t RTC::getAlarmHour()
{
    readAlarm();
    return AlarmHour;
}

uint8_t RTC::getAlarmDay()
{
    readAlarm();
    return AlarmDay;
}

uint8_t RTC::getAlarmWeekday()
{
    readAlarm();
    return AlarmWeekday;
}

bool RTC::checkTimerFlag()
{
    uint8_t _crtl_2 = RTC_TIMER_FLAG;

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_2);
    Wire.endTransmission();
    Wire.requestFrom(I2C_ADDR, 1);
    _crtl_2 &= Wire.read();

    return _crtl_2;
}

bool RTC::checkAlarmFlag()
{
    uint8_t _crtl_2 = RTC_ALARM_AF;

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_2);
    Wire.endTransmission();
    Wire.requestFrom(I2C_ADDR, 1);
    _crtl_2 &= Wire.read();

    return _crtl_2;
}

void RTC::clearAlarmFlag()
{
    uint8_t _crtl_2;

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_2);
    Wire.endTransmission();
    Wire.requestFrom(I2C_ADDR, 1);

    _crtl_2 = Wire.read() & ~(RTC_ALARM_AF);

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_2);
    Wire.write(_crtl_2);
    Wire.endTransmission();
}

void RTC::clearTimerFlag()
{
    uint8_t _crtl_2;

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_2);
    Wire.endTransmission();
    Wire.requestFrom(I2C_ADDR, 1);

    _crtl_2 = Wire.read() & ~(RTC_TIMER_FLAG);

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_2);
    Wire.write(_crtl_2);
    Wire.endTransmission();
}

void RTC::disableTimer()
{
    uint8_t _timerMode;

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_TIMER_MODE);
    Wire.endTransmission();
    Wire.requestFrom(I2C_ADDR, 1);

    _timerMode = Wire.read() & ~(RTC_TIMER_TE);

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_TIMER_MODE);
    Wire.write(_timerMode);
    Wire.endTransmission();
}

bool RTC::changeTimeFormat()
{
    uint8_t reg;

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_1);
    Wire.endTransmission();
    Wire.requestFrom(I2C_ADDR, 1);
    reg = Wire.read();

    _12hMode = !_12hMode;

    if (_12hMode)
        reg |= (1 << 3); // set 12_24 bit
    else
        reg &= ~(1 << 3); // clear 12_24 bit

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_1);
    Wire.write(reg);
    Wire.endTransmission();

    return _12hMode;
}

bool RTC::isSet()
{
    uint8_t _ramByte;
    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_RAM_by);
    Wire.endTransmission();

    Wire.requestFrom(I2C_ADDR, 1);
    _ramByte = Wire.read();
    return _ramByte == 170;
}

void RTC::reset() // datasheet 8.2.1.3.
{
    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_1);
    Wire.write(RTC_CTRL_1_DEFAULT);
    Wire.endTransmission();
}

void RTC::setInternalCapacitor(bool val)
{
    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_1);
    Wire.endTransmission();

    uint8_t reg;
    Wire.requestFrom(I2C_ADDR, 1);

    if (Wire.available())
    {
        reg = Wire.read();
    }

    if (val)
    {
        reg |= (1 << 0);
    }
    else
    {
        reg &= ~(1 << 0);
    }

    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_CTRL_1);
    Wire.write(reg);
    Wire.endTransmission();
}

void RTC::setClockOffset(bool mode, int offsetValue)
{
    // Byte for writting in the register
    uint8_t regValue;

    // Check offset value
    if (offsetValue > 63 || offsetValue < -64)
    {
        return;
    }

    // Use two's complement
    if (offsetValue < 0)
    {
        offsetValue += 128;
    }

    // Save it in the byte for register
    regValue = (byte)offsetValue;

    // Write mode in the MSB
    if (mode)
    {
        regValue |= (1 << 7); // Set MSB to 1
    }
    else
    {
        regValue &= ~(1 << 7); // Set MSB to 0
    }

    // Send to the register
    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_OFFSET);
    Wire.write(regValue);
    Wire.endTransmission();
}

void RTC::updateTime()
{
    Wire.beginTransmission(I2C_ADDR);
    Wire.write(RTC_SECOND_ADDR);
    Wire.endTransmission();
    Wire.requestFrom(I2C_ADDR, 7);

    Second = bcdToDec(Wire.read() & 0x7F);
    Minute = bcdToDec(Wire.read() & 0x7F);

    uint8_t hourReg = Wire.read();
    if (_12hMode)
    {
        // bit 5 defines the time format
        _isPM = (hourReg >> 5) & 0x01;
        Hour = bcdToDec(hourReg & 0x1F);
    }
    else
    {
        Hour = bcdToDec(hourReg & 0x3F);
    }

    Day = bcdToDec(Wire.read() & 0x3F);
    Weekday = bcdToDec(Wire.read() & 0x07);
    Month = bcdToDec(Wire.read() & 0x1F);
    Year = bcdToDec(Wire.read()) + 2000;
}
